# lbs-coding1

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  init_data.py  models.py  pyproject.toml  routes.py  start_app.py
app/: __init__.py  init_data.py  models.py  settings.py
app/meters/: init_data.py  routes.py
app/templates/: meters.html
templates/: meters.html
