[tool.poetry]
name = "lbs_coding1"
version = "0.1.0"
description = "lbs_coding1"
authors = ["Salman Raza <razsalman2019@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Faker = "^16.1.0"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
SQLAlchemy-Utils = "^0.39.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9"
black = {version = "^23.1a1", allow-prereleases = true}
mypy = "^0.910"
isort = "^5.9.2"
ptpython = "^3.0.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
